# wimax_ldpc_lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
alist/: wimax_1056_0_5.alist  wimax_1056_0_66A.alist  wimax_1056_0_66B.alist  wimax_1056_0_75A.alist  wimax_1056_0_75B.alist  wimax_1056_0_83.alist  wimax_1152_0_5.alist  wimax_1152_0_66A.alist  wimax_1152_0_66B.alist  wimax_1152_0_75A.alist  wimax_1152_0_75B.alist  wimax_1152_0_83.alist  wimax_1248_0_5.alist  wimax_1248_0_66A.alist  wimax_1248_0_66B.alist  wimax_1248_0_75A.alist  wimax_1248_0_75B.alist  wimax_1248_0_83.alist  wimax_1344_0_5.alist  wimax_1344_0_66A.alist  wimax_1344_0_66B.alist  wimax_1344_0_75A.alist  wimax_1344_0_75B.alist  wimax_1344_0_83.alist  wimax_1440_0_5.alist  wimax_1440_0_66A.alist  wimax_1440_0_66B.alist  wimax_1440_0_75A.alist  wimax_1440_0_75B.alist  wimax_1440_0_83.alist  wimax_1536_0_5.alist  wimax_1536_0_66A.alist  wimax_1536_0_66B.alist  wimax_1536_0_75A.alist  wimax_1536_0_75B.alist  wimax_1536_0_83.alist  wimax_1632_0_5.alist  wimax_1632_0_66A.alist  wimax_1632_0_66B.alist  wimax_1632_0_75A.alist  (+72 more)
cmake/Modules/: FindGSL.cmake  FindMathGL.cmake
include/: BER_runner.h  CMakeLists.txt  enums.h  ldpc.h  ldpc_decoder.h  ldpc_encoder.h  matrices.h
ipython_notebooks/: BER_plots.ipynb  LDPC Example.ipynb  LDPC_alist_generation.ipynb  LDPC_encoder_decoder.ipynb  LDPC_lib_example.ipynb  Matrix Ops.ipynb  OFDM_simulation.ipynb  WIMAX_LDPC_alist_generation.ipynb  dual_diagonal.ipynb  dual_diagonal_encoder_example.ipynb  tdmp_decoder_example.ipynb
lib/: BER_example.cc  BER_runner.cc  CMakeLists.txt  Capacity_plot_example.cc  capacity_curve_data.cc  decode_example.cc  encode_example.cc  ldpc.cc  ldpc.h  ldpc_decoder.cc  ldpc_decoder.h  ldpc_encoder.cc  ldpc_encoder.h
lib/matrices/: README.md  matrices.h  wimax_1056_0_5.cc  wimax_1056_0_5.h  wimax_1056_0_66A.cc  wimax_1056_0_66A.h  wimax_1056_0_66B.cc  wimax_1056_0_66B.h  wimax_1056_0_75A.cc  wimax_1056_0_75A.h  wimax_1056_0_75B.cc  wimax_1056_0_75B.h  wimax_1056_0_83.cc  wimax_1056_0_83.h  wimax_1152_0_5.cc  wimax_1152_0_5.h  wimax_1152_0_66A.cc  wimax_1152_0_66A.h  wimax_1152_0_66B.cc  wimax_1152_0_66B.h  wimax_1152_0_75A.cc  wimax_1152_0_75A.h  wimax_1152_0_75B.cc  wimax_1152_0_75B.h  wimax_1152_0_83.cc  wimax_1152_0_83.h  wimax_1248_0_5.cc  wimax_1248_0_5.h  wimax_1248_0_66A.cc  wimax_1248_0_66A.h  wimax_1248_0_66B.cc  wimax_1248_0_66B.h  wimax_1248_0_75A.cc  wimax_1248_0_75A.h  wimax_1248_0_75B.cc  wimax_1248_0_75B.h  wimax_1248_0_83.cc  wimax_1248_0_83.h  wimax_1344_0_5.cc  wimax_1344_0_5.h  (+190 more)
python/: ldpc_decoder.py  ldpc_encoder.py
python_ldpc/: ldpc_decoder.py  ldpc_encoder.py  ldpc_utils.py
