########################################################################
# Install public header files
########################################################################
install(FILES
    enums.h
    ldpc.h
    matrices.h
    ldpc_encoder.h
    ldpc_decoder.h DESTINATION include/wimax_ldpc_lib
)